Trying barebones team page

--- a/team.html
+++ b/team.html
@@ -12,7 +12,7 @@ sitemap:
 	<h1>Team</h1>
 </header>
       
-{% assign sorted = (site.teams | sort: 'date') | reverse %}
+<!--{% assign sorted = (site.teams | sort: 'date') | reverse %}
 {% for team in sorted %}
     <div class="content">
     <header class="major">
@@ -47,7 +47,7 @@ sitemap:
     {% endfor %}
     </div>
 {% endfor %}
-<br/>
+<br/>-->
 
 
 
