Moved people images

--- a/team.html
+++ b/team.html
@@ -15,14 +15,14 @@ sitemap:
 
 
 <h3> <strong>PhD students   </strong></h3>
-<span class="image left"><img src="{{ "/images/raphael-stern.jpg" | absolute_url }}" alt="" /></span>
+<span class="image left"><img src="{{ "/images/people/raphael-stern.jpg" | absolute_url }}" alt="" /></span>
 Rafi Stern, <a href="http://publish.illinois.edu/raphaelstern/">http://publish.illinois.edu/raphaelstern/</a><br />
 Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2018 (expected)<br />
 M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2015<br />
 B.S., Civil Engineering, University of Illinois at Urbana-Champaign, 2013<br />
 
 <p>&nbsp;</p>
-<span class="image left"><img src="{{ "/images/barbour.jpg" | absolute_url }}" alt="" /></span>
+<span class="image left"><img src="{{ "/images/people/barbour.jpg" | absolute_url }}" alt="" /></span>
 William Barbour, <a href="mailto:wwbarbo2@illinois.edu" target="_blank" rel="noopener"><span class="il">william.w.barbour@vanderbilt.edu</span></a><br />
 Ph.D, Civil Infrastructure Systems, CEE, Vanderbilt University 2020 (expected)<br />
 M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2017<br />
@@ -30,7 +30,7 @@ B.S., Biosystems Engineering, University of Tennessee, Knoxville, 2015<br />
 <p>&nbsp;</p>   
     
 <h3><strong>MS students</strong></h3>
-<span class="image left"><img src="{{ "/images/IMG_1190--150x150.jpg" | absolute_url }}" alt="" /></span>
+<span class="image left"><img src="{{ "/images/people/IMG_1190--150x150.jpg" | absolute_url }}" alt="" /></span>
 Fangyu Wu, <a href="http://www.fangyuwu.com" target="_blank" rel="noopener">http://www.fangyuwu.com</a><br />
 M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2018 (expected)<br />
 B.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2015<br />
@@ -39,28 +39,28 @@ B.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2015<br />
 
 <h2><b>Alumni</b></h2>
 <p><strong>Post Docs</strong></p>
-<span class="image left"><img src="{{ "/images/shimao.jpg" | absolute_url }}" alt="" /></span>
+<span class="image left"><img src="{{ "/images/people/shimao.jpg" | absolute_url }}" alt="" /></span>
 Ph.D. Applied and Computational Mathematics, Temple University, 2013.<br />
 B.S. Applied and Computational Mathematics, HuaZhong University of Science and Technology, 2007.<br />
 Position after completion: Union Bank, NA.<br />
 
 
 <p><strong>PhD Students</strong></p>
-<span class="image left"><img src="{{ "/images/Ye-Sun.jpg" | absolute_url }}" alt="" width="10"/></span>
+<span class="image left"><img src="{{ "/images/people/Ye-Sun.jpg" | absolute_url }}" alt="" width="10"/></span>
 Ye Sun, <a href="http://www.yesunuiuc.com">http://www.yesunuiuc.com/</a><br />
 Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2017 <br />
 M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2014<br />
 B.S., Civil Engineering,Tsinghua University, 2012<br />
 Position after completion: Boston Consulting Group.<br />
 
-<span class="image left"><img src="{{ "/images/image04-150x150.png" | absolute_url }}" alt="" width="10"/></span>
+<span class="image left"><img src="{{ "/images/people/image04-150x150.png" | absolute_url }}" alt="" width="10"/></span>
 Ren Wang, <a href="https://sites.google.com/site/renwanguiuc/home">https://sites.google.com/site/renwanguiuc</a><br />
 Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2015<br />
 M.S., Industrial and Enterprise Systems Engineering, CEE, UIUC, 2013<br />
 B.S., Transportation Engineering, Beijing University of Technology, 2010<br />
 Position after graduation: Apple<br />
 
-<span class="image left"><img src="{{ "/images/Yanning-Li-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
+<span class="image left"><img src="{{ "/images/people/Yanning-Li-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
 <p>Yanning Li, <a href="https://publish.illinois.edu/yanningli/">https://publish.illinois.edu/yanningli/</a><br />
 Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2017<br />
 M.S., Mechanical Engineering, KAUST 2012<br />
@@ -69,7 +69,7 @@ Position after graduation: Virgin Hyperloop One</p>
 <p>&nbsp;</p>
 
 <p><strong>MS Students</strong></p>
-<span class="image left"><img src="{{ "/images/image05-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
+<span class="image left"><img src="{{ "/images/people/image05-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
 <p>Siting Chang, <a href="mailto:schang13@illinois.edu">schang13@illinois.edu</a><br />
 M.S., Civil and Environmental Engineering, UIUC, 2012<br />
 B.S., Transportation Engineering, Jilin University, 2010<br />
@@ -77,34 +77,34 @@ Position after graduation: M.S. program, Computer Science, UIUC</p>
 <p>&nbsp;</p>
 
 
-<span class="image left"><img src="{{ "/images/untitled.png" | absolute_url }}" alt="" width="10"/></span>
+<span class="image left"><img src="{{ "/images/people/brian.png" | absolute_url }}" alt="" width="10"/></span>
 Brian Donovan, <a href="http://www.brianpdonovan.com/">http://www.brianpdonovan.com/</a><br />
 M.S. Civil and Environmental Engineering UIUC, 2015<br />
 B.S. Computer Science (Machine Intelligence), Purdue, 2013<br />
 Position after graduation: Uber<br />
 <p>&nbsp;</p>
 
-<span class="image left"><img src="{{ "/images/image01-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
+<span class="image left"><img src="{{ "/images/people/image01-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
 Robin Guers, <a href="mailto:guers2@illinois.edu">guers2@illinois.edu</a> (co-advised with Prof. Cedric Langbort)<br />
 M.S., Aerospace Engineering, UIUC, 2013<br />
 M.S., Aerospace Engineering, ISAE SUPAERO, 2011<br />
 Position after graduation:  Apple, Inc.<br />
 
-<span class="image left"><img src="{{ "/images/image07-135x150.png" | absolute_url }}" alt="" width="10"/></span>
+<span class="image left"><img src="{{ "/images/people/image07-135x150.png" | absolute_url }}" alt="" width="10"/></span>
 Sudeep Gowrishankar, <a href="mailto:sgowris2@illinois.edu">sgowris2@illinois.edu</a><br />
 M.S., Mechanical Engineering, 2013<br />
 B.S., Mechanical Engineering, UIUC, 2011<br />
 Position after graduation: DMC Engineering<br />
 
 
-<span class="image left"><img src="{{ "/images/image10-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
+<span class="image left"><img src="{{ "/images/people/image10-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
 Reece Otsuka, <a href="mailto:otsuka2@illinois.edu">otsuka2@illinois.edu</a> (co-advised with Prof. Junho Song)<br />
 M.S., Civil and Environmental Engineering, UIUC, 2014<br />
 B.S., Civil Engineering, Massachusetts Institute of Technology, 2012<br />
 Position after graduation: Enercon Services<br />
 
 
-<span class="image left"><img src="{{ "/images/image03.jpg" | absolute_url }}" alt="" width="10"/></span>
+<span class="image left"><img src="{{ "/images/people/image03.jpg" | absolute_url }}" alt="" width="10"/></span>
 Samuel J. Rivera Aparicio, <a href="mailto:srivera2@illinois.edu">srivera2@illinois.edu</a> (co-advised with Prof. Barbara Minsker and Prof. Dan Roth)<br />
 M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2013<br />
 B.S., Civil Engineering, University of Puerto Rico, Mayaguez Campus, 2011<br />
@@ -112,7 +112,7 @@ Position after graduation: PhD program, Civil Engineering, UIUC.<br />
 
 
 <p><strong> Research Staff</strong></p>
-<span class="image left"><img src="{{ "/images/image09.png" | absolute_url }}" alt="" width="10"/></span>
+<span class="image left"><img src="{{ "/images/people/image09.png" | absolute_url }}" alt="" width="10"/></span>
 <p>Camilo Vega, <a href="mailto:cvega10@illinois.edu">cvega10@illinois.edu</a><br />
 B.S., Electronics Engineering, University of Los Andes, Colombia, 2010<br />
 Position after completion: M.S. program, Technology Management, UIUC</p>
