Missed comment line

--- a/team.html
+++ b/team.html
@@ -40,8 +40,8 @@ sitemap:
     <div style="text-align: justify;"> {{ teammatey.description }} </div>
     </p>
     <br>
-    <br>-->
-{% endfor %}
+    <br>
+{% endfor %}-->
 {% endfor %}
 
 
