--- a/team.html
+++ b/team.html
@@ -13,8 +13,8 @@ sitemap:
 </header>
 
 <!--{% assign sorted = (site.teams | sort: 'appear') %}-->
-{% for team in site.teams %}
-    <h2>{{ team.name }}</h2>
+<!--{% for team in site.teams %}-->
+<!--    <h2>{{ team.name }}</h2>-->
     <!--<br>
     {% for people in team.people %}
     {% assign teammatey = site.people | where:"key", people  | first %}
@@ -42,7 +42,7 @@ sitemap:
     <br>
     <br>
 {% endfor %}-->
-{% endfor %}
+<!--{% endfor %}-->
 
 
 
