Reverted comments on old html

--- a/team.html
+++ b/team.html
@@ -46,7 +46,7 @@ sitemap:
 
 
 
-<!--<h3> <strong>PhD students   </strong></h3>
+<h3> <strong>PhD students   </strong></h3>
 <span class="image left"><img src="{{ "/images/people/raphael-stern.jpg" | absolute_url }}" alt="" /></span>
 Rafi Stern, <a href="http://publish.illinois.edu/raphaelstern/">http://publish.illinois.edu/raphaelstern/</a><br />
 Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2018 (expected)<br />
@@ -196,4 +196,4 @@ Position after completion: M.S. program, Technology Management, UIUC</p>
 <li>Brian Donovan, Departmental Fellowship, UIUC 2013</li>
 <li>Ye Sun, Departmental Fellowship, UIUC 2013</li>
 <li>Samuel Rivera, Graduate Research Fellowship, National Science Foundation 2013</li>
-</ul>-->
+</ul>
