Completely reverted team page

--- a/team.html
+++ b/team.html
@@ -12,60 +12,28 @@ sitemap:
 	<h1>Team</h1>
 </header>
 
-<!--{% assign sorted = (site.teams | sort: 'appear') %}-->
-<!--{% for team in site.teams %}-->
-<!--    <h2>{{ team.name }}</h2>-->
-    <!--<br>
-    {% for people in team.people %}
-    {% assign teammatey = site.people | where:"key", people  | first %}
-    <p style="clear: both;">
-    <span class="image  left" style="max-width: 150px;">
-    {% if teammatey.site %}
-        <a href="{{ teammatey.site }}">
-    {% endif %}
-    <img src="{{ site.baseurl }}{{ teammatey.image }}" alt="" />
-    {% if teammatey.site %}
-        </a>
-    {% endif %}
-    </span>
-    <h3>
-        {% if teammatey.site %}
-            <a href="{{ teammatey.site }}">
-        {% endif %}
-        <b>{{ teammatey.name}}</b>
-        {% if teammatey.site %}
-            </a>
-        {% endif %}
-    </h3>
-    <div style="text-align: justify;"> {{ teammatey.description }} </div>
-    </p>
-    <br>
-    <br>
-{% endfor %}-->
-<!--{% endfor %}-->
 
 
-
-<h3> <strong>PhD students   </strong></h3>
+<h3> <strong>PhD students   </strong></h3>
 <span class="image left"><img src="{{ "/images/people/raphael-stern.jpg" | absolute_url }}" alt="" /></span>
 Rafi Stern, <a href="http://publish.illinois.edu/raphaelstern/">http://publish.illinois.edu/raphaelstern/</a><br />
 Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2018 (expected)<br />
-M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2015<br />
+M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2015<br />
 B.S., Civil Engineering, University of Illinois at Urbana-Champaign, 2013<br />
 
 <p>&nbsp;</p>
 <span class="image left"><img src="{{ "/images/people/barbour.jpg" | absolute_url }}" alt="" /></span>
-William Barbour, <a href="mailto:wwbarbo2@illinois.edu" target="_blank" rel="noopener"><span class="il">william.w.barbour@vanderbilt.edu</span></a><br />
+William Barbour, <a href="mailto:wwbarbo2@illinois.edu" target="_blank" rel="noopener"><span class="il">william.w.barbour@vanderbilt.edu</span></a><br />
 Ph.D, Civil Infrastructure Systems, CEE, Vanderbilt University 2020 (expected)<br />
-M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2017<br />
+M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2017<br />
 B.S., Biosystems Engineering, University of Tennessee, Knoxville, 2015<br />
 <p>&nbsp;</p>   
     
 <h3><strong>MS students</strong></h3>
 <span class="image left"><img src="{{ "/images/people/IMG_1190--150x150.jpg" | absolute_url }}" alt="" /></span>
-Fangyu Wu, <a href="http://www.fangyuwu.com" target="_blank" rel="noopener">http://www.fangyuwu.com</a><br />
+Fangyu Wu, <a href="http://www.fangyuwu.com" target="_blank" rel="noopener">http://www.fangyuwu.com</a><br />
 M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2018 (expected)<br />
-B.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2015<br />
+B.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2015<br />
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
@@ -86,14 +54,14 @@ B.S., Civil Engineering,Tsinghua University, 2012<br />
 Position after completion: Boston Consulting Group.<br />
 
 <span class="image left"><img src="{{ "/images/people/image04-150x150.png" | absolute_url }}" alt="" width="10"/></span>
-Ren Wang, <a href="https://sites.google.com/site/renwanguiuc/home">https://sites.google.com/site/renwanguiuc</a><br />
+Ren Wang, <a href="https://sites.google.com/site/renwanguiuc/home">https://sites.google.com/site/renwanguiuc</a><br />
 Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2015<br />
 M.S., Industrial and Enterprise Systems Engineering, CEE, UIUC, 2013<br />
 B.S., Transportation Engineering, Beijing University of Technology, 2010<br />
-Position after graduation: Apple<br />
+Position after graduation: Apple<br />
 
 <span class="image left"><img src="{{ "/images/people/Yanning-Li-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
-<p>Yanning Li, <a href="https://publish.illinois.edu/yanningli/">https://publish.illinois.edu/yanningli/</a><br />
+<p>Yanning Li, <a href="https://publish.illinois.edu/yanningli/">https://publish.illinois.edu/yanningli/</a><br />
 Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2017<br />
 M.S., Mechanical Engineering, KAUST 2012<br />
 B.S., Mechanical Engineering, Zhejiang University 2011<br />
@@ -109,18 +77,18 @@ Position after graduation: M.S. program, Computer Science, UIUC</p>
 <p>&nbsp;</p>
 
 
-<span class="image left"><img src="{{ "/images/people/brian.png" | absolute_url }}" alt="" width="10"/></span>
-Brian Donovan, <a href="http://www.brianpdonovan.com/">http://www.brianpdonovan.com/</a><br />
-M.S. Civil and Environmental Engineering UIUC, 2015<br />
+<span class="image left"><img src="{{ "/images/people/untitled.png" | absolute_url }}" alt="" width="10"/></span>
+Brian Donovan, <a href="http://www.brianpdonovan.com/">http://www.brianpdonovan.com/</a><br />
+M.S. Civil and Environmental Engineering UIUC, 2015<br />
 B.S. Computer Science (Machine Intelligence), Purdue, 2013<br />
-Position after graduation: Uber<br />
+Position after graduation: Uber<br />
 <p>&nbsp;</p>
 
 <span class="image left"><img src="{{ "/images/people/image01-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
 Robin Guers, <a href="mailto:guers2@illinois.edu">guers2@illinois.edu</a> (co-advised with Prof. Cedric Langbort)<br />
 M.S., Aerospace Engineering, UIUC, 2013<br />
 M.S., Aerospace Engineering, ISAE SUPAERO, 2011<br />
-Position after graduation:  Apple, Inc.<br />
+Position after graduation:  Apple, Inc.<br />
 
 <span class="image left"><img src="{{ "/images/people/image07-135x150.png" | absolute_url }}" alt="" width="10"/></span>
 Sudeep Gowrishankar, <a href="mailto:sgowris2@illinois.edu">sgowris2@illinois.edu</a><br />
@@ -130,7 +98,7 @@ Position after graduation: DMC Engineering<br />
 
 
 <span class="image left"><img src="{{ "/images/people/image10-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
-Reece Otsuka, <a href="mailto:otsuka2@illinois.edu">otsuka2@illinois.edu</a> (co-advised with Prof. Junho Song)<br />
+Reece Otsuka, <a href="mailto:otsuka2@illinois.edu">otsuka2@illinois.edu</a> (co-advised with Prof. Junho Song)<br />
 M.S., Civil and Environmental Engineering, UIUC, 2014<br />
 B.S., Civil Engineering, Massachusetts Institute of Technology, 2012<br />
 Position after graduation: Enercon Services<br />
@@ -158,9 +126,9 @@ Position after completion: M.S. program, Technology Management, UIUC</p>
 <li>Miles Churchill (I), BS, Civil and Environmental Engineering 2016</li>
 <li>Chris Chen (I), BS Electrical and Computer ENgineering 2016</li>
 <li>Nimit Agrawal (I), BS Computer Science, 2015</li>
-<li>Juan Carlos Martinez Mori (I), BS Civil and Environmental Engineering, 2015</li>
+<li>Juan Carlos Martinez Mori (I), BS Civil and Environmental Engineering, 2015</li>
 <li>Fangyu Wu (I), BS Civil and Environmental Engineering, 2015</li>
-<li>Guangyu Zhou (I), BS Computer Science, 2015</li>
+<li>Guangyu Zhou (I), BS Computer Science, 2015</li>
 <li>Maya Meng (I), BS Computer science, 2014</li>
 <li>Chase Duncan (I), BS Computer Science, 2014</li>
 <li>Alec Mori (I), BS Computer Science, 2014</li>
