Headers not showing up

--- a/team.html
+++ b/team.html
@@ -167,5 +167,5 @@ Position after completion: M.S. program, Technology Management, UIUC</p>
 </ul>
 
 {% for team in site.teams %}
-    <h2>{{ team.name }}</h2>
+    <h2>Header</h2>
 {% endfor %}
