Site.teams may not be returning anything

--- a/team.html
+++ b/team.html
@@ -166,6 +166,7 @@ Position after completion: M.S. program, Technology Management, UIUC</p>
 <li>Samuel Rivera, Graduate Research Fellowship, National Science Foundation 2013</li>
 </ul>
 
+<h2>TEAMS</h2>
 {% for team in site.teams %}
     <h2>Header</h2>
 {% endfor %}
