Access people attributes

--- a/team.html
+++ b/team.html
@@ -12,161 +12,39 @@ sitemap:
 	<h1>Team</h1>
 </header>
 
-
-
-<h3> <strong>PhD students   </strong></h3>
-<span class="image left"><img src="{{ "/images/people/raphael-stern.jpg" | absolute_url }}" alt="" /></span>
-Rafi Stern, <a href="http://publish.illinois.edu/raphaelstern/">http://publish.illinois.edu/raphaelstern/</a><br />
-Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2018 (expected)<br />
-M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2015<br />
-B.S., Civil Engineering, University of Illinois at Urbana-Champaign, 2013<br />
-
-<p>&nbsp;</p>
-<span class="image left"><img src="{{ "/images/people/barbour.jpg" | absolute_url }}" alt="" /></span>
-William Barbour, <a href="mailto:wwbarbo2@illinois.edu" target="_blank" rel="noopener"><span class="il">william.w.barbour@vanderbilt.edu</span></a><br />
-Ph.D, Civil Infrastructure Systems, CEE, Vanderbilt University 2020 (expected)<br />
-M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2017<br />
-B.S., Biosystems Engineering, University of Tennessee, Knoxville, 2015<br />
-<p>&nbsp;</p>   
-    
-<h3><strong>MS students</strong></h3>
-<span class="image left"><img src="{{ "/images/people/IMG_1190--150x150.jpg" | absolute_url }}" alt="" /></span>
-Fangyu Wu, <a href="http://www.fangyuwu.com" target="_blank" rel="noopener">http://www.fangyuwu.com</a><br />
-M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2018 (expected)<br />
-B.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2015<br />
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-
-<h2><b>Alumni</b></h2>
-<p><strong>Post Docs</strong></p>
-<span class="image left"><img src="{{ "/images/people/shimao.jpg" | absolute_url }}" alt="" /></span>
-Ph.D. Applied and Computational Mathematics, Temple University, 2013.<br />
-B.S. Applied and Computational Mathematics, HuaZhong University of Science and Technology, 2007.<br />
-Position after completion: Union Bank, NA.<br />
-
-
-<p><strong>PhD Students</strong></p>
-<span class="image left"><img src="{{ "/images/people/Ye-Sun.jpg" | absolute_url }}" alt="" width="10"/></span>
-Ye Sun, <a href="http://www.yesunuiuc.com">http://www.yesunuiuc.com/</a><br />
-Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2017 <br />
-M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2014<br />
-B.S., Civil Engineering,Tsinghua University, 2012<br />
-Position after completion: Boston Consulting Group.<br />
-
-<span class="image left"><img src="{{ "/images/people/image04-150x150.png" | absolute_url }}" alt="" width="10"/></span>
-Ren Wang, <a href="https://sites.google.com/site/renwanguiuc/home">https://sites.google.com/site/renwanguiuc</a><br />
-Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2015<br />
-M.S., Industrial and Enterprise Systems Engineering, CEE, UIUC, 2013<br />
-B.S., Transportation Engineering, Beijing University of Technology, 2010<br />
-Position after graduation: Apple<br />
-
-<span class="image left"><img src="{{ "/images/people/Yanning-Li-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
-<p>Yanning Li, <a href="https://publish.illinois.edu/yanningli/">https://publish.illinois.edu/yanningli/</a><br />
-Ph.D, Sustainable and Resilient Infrastructure Systems, CEE, UIUC 2017<br />
-M.S., Mechanical Engineering, KAUST 2012<br />
-B.S., Mechanical Engineering, Zhejiang University 2011<br />
-Position after graduation: Virgin Hyperloop One</p>
-<p>&nbsp;</p>
-
-<p><strong>MS Students</strong></p>
-<span class="image left"><img src="{{ "/images/people/image05-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
-<p>Siting Chang, <a href="mailto:schang13@illinois.edu">schang13@illinois.edu</a><br />
-M.S., Civil and Environmental Engineering, UIUC, 2012<br />
-B.S., Transportation Engineering, Jilin University, 2010<br />
-Position after graduation: M.S. program, Computer Science, UIUC</p>
-<p>&nbsp;</p>
-
-
-<span class="image left"><img src="{{ "/images/people/untitled.png" | absolute_url }}" alt="" width="10"/></span>
-Brian Donovan, <a href="http://www.brianpdonovan.com/">http://www.brianpdonovan.com/</a><br />
-M.S. Civil and Environmental Engineering UIUC, 2015<br />
-B.S. Computer Science (Machine Intelligence), Purdue, 2013<br />
-Position after graduation: Uber<br />
-<p>&nbsp;</p>
-
-<span class="image left"><img src="{{ "/images/people/image01-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
-Robin Guers, <a href="mailto:guers2@illinois.edu">guers2@illinois.edu</a> (co-advised with Prof. Cedric Langbort)<br />
-M.S., Aerospace Engineering, UIUC, 2013<br />
-M.S., Aerospace Engineering, ISAE SUPAERO, 2011<br />
-Position after graduation:  Apple, Inc.<br />
-
-<span class="image left"><img src="{{ "/images/people/image07-135x150.png" | absolute_url }}" alt="" width="10"/></span>
-Sudeep Gowrishankar, <a href="mailto:sgowris2@illinois.edu">sgowris2@illinois.edu</a><br />
-M.S., Mechanical Engineering, 2013<br />
-B.S., Mechanical Engineering, UIUC, 2011<br />
-Position after graduation: DMC Engineering<br />
-
-
-<span class="image left"><img src="{{ "/images/people/image10-150x150.jpg" | absolute_url }}" alt="" width="10"/></span>
-Reece Otsuka, <a href="mailto:otsuka2@illinois.edu">otsuka2@illinois.edu</a> (co-advised with Prof. Junho Song)<br />
-M.S., Civil and Environmental Engineering, UIUC, 2014<br />
-B.S., Civil Engineering, Massachusetts Institute of Technology, 2012<br />
-Position after graduation: Enercon Services<br />
-
-
-<span class="image left"><img src="{{ "/images/people/image03.jpg" | absolute_url }}" alt="" width="10"/></span>
-Samuel J. Rivera Aparicio, <a href="mailto:srivera2@illinois.edu">srivera2@illinois.edu</a> (co-advised with Prof. Barbara Minsker and Prof. Dan Roth)<br />
-M.S., Sustainable and Resilient Infrastructure Systems, CEE, UIUC, 2013<br />
-B.S., Civil Engineering, University of Puerto Rico, Mayaguez Campus, 2011<br />
-Position after graduation: PhD program, Civil Engineering, UIUC.<br />
-
-
-<p><strong> Research Staff</strong></p>
-<span class="image left"><img src="{{ "/images/people/image09.png" | absolute_url }}" alt="" width="10"/></span>
-<p>Camilo Vega, <a href="mailto:cvega10@illinois.edu">cvega10@illinois.edu</a><br />
-B.S., Electronics Engineering, University of Los Andes, Colombia, 2010<br />
-Position after completion: M.S. program, Technology Management, UIUC</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-
-
-<p><strong>Research interns and undergraduate students</strong></p>
-<p>(V) indicates visiting student, (I) indicates UIUC student, year indicates period of visit, collaboration, or employment with the team.</p>
-<ul>
-<li>Miles Churchill (I), BS, Civil and Environmental Engineering 2016</li>
-<li>Chris Chen (I), BS Electrical and Computer ENgineering 2016</li>
-<li>Nimit Agrawal (I), BS Computer Science, 2015</li>
-<li>Juan Carlos Martinez Mori (I), BS Civil and Environmental Engineering, 2015</li>
-<li>Fangyu Wu (I), BS Civil and Environmental Engineering, 2015</li>
-<li>Guangyu Zhou (I), BS Computer Science, 2015</li>
-<li>Maya Meng (I), BS Computer science, 2014</li>
-<li>Chase Duncan (I), BS Computer Science, 2014</li>
-<li>Alec Mori (I), BS Computer Science, 2014</li>
-<li>Thomas Breier (V), BS Technical University of Munich, Germany, 2014</li>
-<li>Meng Han (I), BS Civil and Environmental Engineering, 2013</li>
-<li>Bhinav Sura (I), MS Computer Science, 2013</li>
-<li>Jon Que (I), BS Civil and Environmental Engineering, 2012</li>
-<li>Mostafa Reisi Gahrooei (V), PhD Georgia Tech, 2012</li>
-<li>Raphael Stern (I), BS Civil and Environmental Engineering, 2012</li>
-<li>Sebastien Deprez (V), BS Ecole Polytechnique, France, 2011</li>
-<li>Eileen Walz (I), BS Civil and Environmental Engineering, 2011</li>
-</ul>
-<p>&nbsp;</p>
-<h2>Student awards and research internships</h2>
-<ul>
-<li>Juan Carlos Martinez Mori, Melih T. Dural Undergraduate Research Prize, Department of Civil and Environmental Engineering, UIUC, 2017</li>
-<li>Will Barbour, Student of the Year, Roadway Safety Institute University Transportation Center, 2016</li>
-<li>Will Barbour, Dwight David Eisenhower Transportation Fellow, US Department of Transportation 2016</li>
-<li>Will Barbour, research intern, CSX Transportation 2016</li>
-<li>Ye Sun, Helene M. Overly Memorial Graduate Scholarship, WTS Greater Chicago Area Chapter 2015</li>
-<li>Will Barbour, Departmental Fellowship, UIUC 2015</li>
-<li>Raphael Stern, Dwight David Eisenhower Transportation Fellow, US Department of Transportation 2015</li>
-<li>Raphael Stern, Best Transportation Systems Presentation Award, 4th Annual International PhD Student Conference, Harbin, China 2015</li>
-<li>Raphael Stern, Conference Travel Award, Graduate College, UIUC 2015</li>
-<li>Yanning Li, Chester P. Siess Award for Student Conference Travel, Department of Civil and Environmental Engineering, UIUC 2015</li>
-<li>Fangyu Wu, Grant Shaw Award, Department of Civil and Environmental Engineering, UIUC 2015</li>
-<li>Juan Carlos Martinez Mori, Grant Shaw Award, Department of Civil and Environmental Engineering, UIUC 2015</li>
-<li>Ren Wang, research intern, IBM Ireland Research Lab, Dublin, Ireland 2015</li>
-<li>Ye Sun, research intern, IBM Research Collaboratory, Singapore 2014</li>
-<li>Raphael Stern, Eno Fellow, Eno Transportation Foundation 2014</li>
-<li>Raphael Stern, Dwight David Eisenhower Transportation Fellow, US Department of Transportation 2014</li>
-<li>Raphael Stern, Data Science for Social Good Fellow, Eric and Wendy Schmidt Foundation 2014</li>
-<li>Brian Donovan, Departmental Fellowship, UIUC 2013</li>
-<li>Ye Sun, Departmental Fellowship, UIUC 2013</li>
-<li>Samuel Rivera, Graduate Research Fellowship, National Science Foundation 2013</li>
-</ul>
-
 <h2>TEAMS</h2>
 {% for team in site.teams %}
     <h2>Header</h2>
+    {% assign sorted = (site.teams | sort: 'date') | reverse %}
+    {% for team in sorted %}
+    <div class="content">
+    <br>
+    {% for people in team.people %}
+        {% assign teammatey = site.people | where:"key", people  | first %}
+        <h3>{{ teammatey.name }}</h3>
+        <!--<p style="clear: both;">
+        <span class="image  left" style="max-width: 150px;">
+        {% if teammatey.site %}
+            <a href="{{ teammatey.site }}">
+        {% endif %}
+        <img src="{{ site.baseurl }}{{ teammatey.image }}" alt="" />
+        {% if teammatey.site %}
+            </a>
+        {% endif %}
+        </span>
+        <h3>
+        {% if teammatey.site %}
+            <a href="{{ teammatey.site }}">
+        {% endif %}
+        <b>{{ teammatey.name}}</b>
+        {% if teammatey.site %}
+            </a>
+        {% endif %}
+        </h3>-->
+        <!--<div style="text-align: justify;"> {{ teammatey.description }} </div>
+        </p>
+        <br>
+        <br>-->
+    {% endfor %}
+    </div>
 {% endfor %}
